--- a/BackPropFullCode.ipynb
+++ b/BackPropFullCode.ipynb
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 28,
       "metadata": {
         "id": "Ag2iSrF_cmax"
       },
@@ -465,7 +465,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(1, 3)"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "X.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -478,16 +498,333 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'W1': array([[0.28869735, 0.23567597, 0.11877703],\n",
-            "       [0.30184999, 0.87898168, 0.23652918],\n",
-            "       [0.72732875, 0.83935795, 0.419922  ]]), 'b1': array([0.12565607, 0.26643362, 0.08139086]), 'W2': array([[0.38396647, 0.7600736 , 0.54402482],\n",
-            "       [0.08819219, 0.5653798 , 0.66892124],\n",
-            "       [0.01872262, 0.16715281, 0.0605212 ]]), 'b2': array([0.67908367, 0.20217154, 0.85491273])}\n"
+            "{'W1': array([[0.93531191, 0.41326554, 0.9663762 ],\n",
+            "       [0.28112957, 0.14396414, 0.02430059],\n",
+            "       [0.02239634, 0.18444227, 0.21538928]]), 'b1': array([0.25639088, 0.23416043, 0.25254418]), 'W2': array([[0.52154213, 0.35245068, 0.14194732],\n",
+            "       [0.74321617, 0.55340341, 0.50516139],\n",
+            "       [0.17778581, 0.15401293, 0.52304115]]), 'b2': array([0.04253332, 0.16330358, 0.98296904])}\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n",
+            "(3, 3) (3,)\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'W1': array([[-2.13568518,  0.41326554, -2.10462089],\n",
+              "        [-3.47026312,  0.14396414, -3.72709211],\n",
+              "        [ 1.61531302,  0.18444227,  1.80830596]]),\n",
+              " 'b1': array([-2.81460621, -3.51723226,  1.84546086]),\n",
+              " 'W2': array([[ -8.33575462,  -5.88937595,  -5.98592436],\n",
+              "        [-16.59529465, -11.66522058, -11.49039123],\n",
+              "        [ 26.37359339,  18.61446356,  18.64646544]]),\n",
+              " 'b2': array([ -9.8381964 , -19.17861798,  30.20562032])}"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "parameters = train(X, Y, 300, [3], sigmoid, softmax, dsigmoid, d_cross_entropy, 50, sgd)"
+        "train(X, Y, 300, [3], sigmoid, softmax, dsigmoid, d_cross_entropy, 50, sgd)"
       ]
     },
     {
