Small changes to initialization

--- a/example.ipynb
+++ b/example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.00102595, 0.0021099 , 0.99686416])"
+       "array([8.32313488e-04, 6.99473478e-04, 9.98468213e-01])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0.00685056, 0.00837635, 0.98477309]]), array([[0, 0, 1]]))"
+       "(array([[8.32313488e-04, 6.99473478e-04, 9.98468213e-01]]), array([[0, 0, 1]]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,23 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'W1': array([[ 0.25997786, -0.17809446,  0.20110253],\n",
-       "        [-0.32590173, -1.03563709,  0.2516722 ],\n",
-       "        [-0.69068281,  0.85859981, -0.55948823]]),\n",
-       " 'b1': array([ 0.07146537,  1.64966975, -0.81977554]),\n",
-       " 'W2': array([[0.67419371, 0.15185992, 0.44700593],\n",
-       "        [0.9744497 , 0.9956726 , 0.45230695],\n",
-       "        [0.89104049, 0.93548917, 0.43082721]]),\n",
-       " 'b2': array([0.90336002, 0.9612695 , 0.7919596 ])}"
+       "{'W1': array([[ 0.1559491 , -0.59534598,  0.02337649],\n",
+       "        [ 1.11253317,  0.52711763,  1.21102024],\n",
+       "        [-0.51604917,  0.98596814, -0.50683382]]),\n",
+       " 'b1': array([0.88687105, 0.33197113, 1.40211302]),\n",
+       " 'W2': array([[-0.4115832 , -1.48675831, -0.58782822],\n",
+       "        [-0.21902098, -1.42000498, -0.4692655 ],\n",
+       "        [ 1.34422751,  1.80003479,  1.15448668]]),\n",
+       " 'b2': array([-0.22193922, -0.67182255,  1.45632139])}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -178,17 +178,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_one_hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from lossfunctions import LossFunctions\n",
-    "from activations import Linear\n",
+    "from activations import Activations\n",
     "\n",
-    "squaredError = LossFunctions.SquaredError()\n",
+    "squaredError = LossFunctions.SquaredErrorLoss()\n",
+    "linear = Activations.Linear()\n",
     "\n",
-    "\n",
-    "model = FeedForwardNeuralNets(X, [10], y_one_hot, optimizer=\"adam\")\n",
+    "model = FeedForwardNeuralNets(X, [10], y, optimizer=\"adam\", O=linear, L=squaredError)\n",
     "\n",
     "\n",
     "model.train(5000)"
@@ -196,23 +236,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'W1': array([[-1.58535301,  1.0642294 , -0.59078827,  0.2532779 , -0.21750416,\n",
+       "          1.01450647, -0.30460906, -1.09101799, -1.93226555, -1.13683003],\n",
+       "        [ 1.92490259, -1.36967649, -0.33714316, -0.85383308, -0.21537691,\n",
+       "         -0.72404152,  1.37262329, -0.57170264, -0.06467089,  0.40730963],\n",
+       "        [-0.69686003, -0.41470769,  3.14593088, -4.10801332,  0.99110561,\n",
+       "         -0.51931332, -1.54213237, -0.83356154, -2.79396896,  1.24524718],\n",
+       "        [ 0.93735284, -1.69739257,  0.55915956,  0.45928351, -2.38372465,\n",
+       "          1.89509825,  2.18950148, -1.1731903 , -2.02593343, -1.08494988],\n",
+       "        [-1.24135666,  1.6374435 ,  1.40515731, -2.05553883,  0.99020343,\n",
+       "         -1.74954629,  0.94400171,  1.39346432, -0.7377718 , -0.04014289],\n",
+       "        [-0.08997475,  1.26542782,  0.92453895,  1.86803537,  0.7388022 ,\n",
+       "         -2.65493553, -0.21108293, -1.86022558, -2.20201528, -1.87390291],\n",
+       "        [-2.45197122,  0.35304002, -0.16171061,  1.89849987, -0.4981151 ,\n",
+       "         -0.79566622, -0.73971879,  0.66261123, -0.59479021, -0.34644528],\n",
+       "        [ 0.72976959, -1.3520038 , -0.8162017 ,  0.16033436,  1.00615341,\n",
+       "         -2.01166303,  2.3956971 , -2.08904275,  1.24633665, -0.60159184],\n",
+       "        [ 2.64622671, -1.82006515,  0.0388859 ,  0.56986827, -1.34049481,\n",
+       "         -0.35983741,  2.70826107, -0.29927594,  1.21451095, -0.59757005],\n",
+       "        [ 2.03767068, -2.0126489 ,  2.97395153, -2.55746753,  0.74498607,\n",
+       "          1.44848001, -0.24539434, -2.46742974,  0.21083243,  0.82625083]]),\n",
+       " 'b1': array([-0.53550484,  0.09021708,  0.59705315, -0.89309782,  0.43745893,\n",
+       "         0.05829919, -0.59720806,  1.04405064, -1.27685405,  1.16763228]),\n",
+       " 'W2': array([[ 0.24971237,  0.53583089, -1.24963812,  1.05095777, -1.36834503,\n",
+       "         -0.35772512, -0.56814392,  0.35624822,  1.04232419,  0.61663739],\n",
+       "        [ 0.2006303 ,  0.11675783,  1.37763147, -1.05764449,  1.06667855,\n",
+       "          0.42885949,  0.96085588, -0.51820592, -1.12131442, -0.59471444]]),\n",
+       " 'b2': array([0.12414652, 0.72790501])}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00167127 0.99832873]\n",
-      "[0.9953784 0.0046216]\n",
-      "[4.38098471e-04 9.99561902e-01]\n",
-      "[9.99685362e-01 3.14638319e-04]\n",
-      "[0.00789626 0.99210374]\n",
-      "[0.99327361 0.00672639]\n",
-      "[3.65150055e-04 9.99634850e-01]\n",
-      "[9.99461116e-01 5.38884305e-04]\n",
-      "[0.00161463 0.99838537]\n",
-      "[0.9959225 0.0040775]\n"
+      "[0.99978928]\n",
+      "[1.89235588e-05]\n",
+      "[1.00037457]\n",
+      "[-3.28599033e-05]\n",
+      "[0.99932139]\n",
+      "[0.0005834]\n",
+      "[0.99965203]\n",
+      "[-0.00154621]\n",
+      "[1.00009625]\n",
+      "[-0.00072154]\n"
      ]
     }
    ],
